# code-auditor-agent

./: .gitignore  .markdownlint.json  .markdownlintignore  .yamllint.yml  CHANGELOG.md  README.md  cliff.toml  code-auditor-agent.agent.toml  pyproject.toml  requirements.txt
.claude-plugin/: plugin.json
.github/workflows/: ci.yml  notify-marketplace.yml  release.yml  security.yml
.rechecker/: commit-message.txt  files.txt  index.json  merge-worktrees.sh  rck-progress.json
.rechecker/reports/: rck-20260325_131139_main-[LP00002-IT00001-FID00001]-review.md
.serena/: project.yml
agents/: amcaa-claim-verification-agent.md  amcaa-code-correctness-agent.md  amcaa-consolidation-agent.md  amcaa-dedup-agent.md  amcaa-domain-auditor-agent.md  amcaa-fix-agent.md  amcaa-fix-verifier-agent.md  amcaa-skeptical-reviewer-agent.md  amcaa-todo-generator-agent.md  amcaa-verification-agent.md  caa-api-design-reviewer-agent.md  caa-architecture-consistency-agent.md  caa-assumption-auditor-agent.md  caa-claim-verification-agent.md  caa-code-correctness-agent.md  caa-consolidation-agent.md  caa-cross-layer-auditor-agent.md  caa-dedup-agent.md  caa-docker-reviewer-agent.md  caa-domain-auditor-agent.md  caa-elixir-reviewer-agent.md  caa-fix-agent.md  caa-fix-verifier-agent.md  caa-frontend-reviewer-agent.md  caa-function-deep-dive-agent.md  caa-graphql-reviewer-agent.md  caa-i18n-reviewer-agent.md  caa-ios-reviewer-agent.md  caa-jwt-reviewer-agent.md  caa-l10n-reviewer-agent.md  caa-logging-reviewer-agent.md  caa-mcp-server-reviewer-agent.md  caa-monorepo-reviewer-agent.md  caa-pre-mortem-agent.md  caa-prompt-injection-reviewer-agent.md  caa-scenario-walker-agent.md  caa-second-opinion-agent.md  caa-security-review-agent.md  caa-skeptical-reviewer-agent.md  caa-solidity-reviewer-agent.md  (+5 more)
commands/: amcaa-audit-codebase-cmd.md  caa-audit-codebase-cmd.md  caa-delta-audit-cmd.md  caa-delta.md  caa-impl-compare.md  caa-pr-review.md  caa-precommit.md  caa-scan-and-fix.md  caa-scan.md  caa-spec-audit.md  caa-verify-implementation-and-fix.md  caa-verify-implementation.md
design/tasks/: TRDD-20260609_143339+0200-d94a7c5e-ultracode-migration.md  TRDD-20260613_184906+0200-3d971f72-advanced-ultracode-workflows.md  TRDD-20260616_221655+0200-0b67b18d-guaranteed-completion-calibrating-pool.md  TRDD-20260620_043304+0200-a5641fe3-cross-file-lens.md  TRDD-20260620_123713+0200-d4be3b0e-verify-implementation-cmds.md  TRDD-20260620_135035+0200-e78886a9-estimate-based-calibration.md  TRDD-60f53034-ff80-4f1e-a950-2249037e061e-pr-review-skills-top5.md  TRDD-6857f67f-92ba-4888-be11-1eb491c114a0-scenario-walker-and-assumption-auditor.md  TRDD-7e364ace-1fd3-41ed-abc8-1ab96c02c935-bug-detection-completeness.md
git-hooks/: pre-commit  pre-push
rules/: memory-protocol.md
scripts/: __init__.py  _minimal_yaml.py  _plugin_compute_hashes.py  _plugin_verify_hashes.py  add_component.py  add_dependencies.py  amcaa-generate-todos.py  amcaa-merge-audit-reports.py  amcaa-merge-reports-v2.py  amcaa-merge-reports-v2.sh  amcaa-merge-reports.sh  bench_fp_classifier.py  bump_version.py  caa-collect-context.py  caa-generate-prompts.py  caa-generate-todos.py  caa-merge-audit-reports.py  caa-merge-reports.py  cc_scope_rules.py  check_version_consistency.py  claude-plugin-install.py  cli.py  compute_cpv_self_hashes.py  cpv_channel_source_predicate.py  cpv_codemod.py  cpv_dedup.py  cpv_fp_classifier.py  cpv_fp_classifier_rules.py  cpv_hash_manifest_v2.py  cpv_install_scanners.py  cpv_integrity.py  cpv_lint_engine.py  cpv_management_common.py  cpv_pack_components.py  cpv_parametrize_body_predicate.py  cpv_pattern_source_predicate.py  cpv_repo_shape.py  cpv_sarif_writer.py  cpv_sbom_writer.py  cpv_scanner_cache.py  (+65 more)
scripts/prereview/: __init__.py  awc_extensions.py  complexity.py  concurrency.py  cross_layer.py  database.py  detect_languages_and_domains.py  docstring_diff.py  find_new_public_types.py  multi_tenant.py  operational.py  performance.py  run_linters.py  silent_failure.py  test_quality.py
scripts/scenario_generator/: __init__.py  detect_software_type.py  emit_scenarios_json.py  emit_scenarios_md.py  scenario_families.py  types.py
scripts/workflows/: caa-engine.js  caa-simple-scan.md
skills/amcaa-codebase-audit-and-fix-skill/: SKILL.md
skills/amcaa-pr-review-and-fix-skill/: SKILL.md
skills/amcaa-pr-review-skill/: SKILL.md
tests/: conftest.py  test_agent_frontmatter.py  test_commands.py  test_memory_skills.py  test_plugin_manifest.py  test_scenario_generator.py  test_skill_frontmatter.py
tests/fixtures/scenario_generator/cli_python_click/: cli.py  expected-detected-types.json  expected-scenarios.json  pyproject.toml  setup.py
tests/fixtures/scenario_generator/cli_rust/: Cargo.toml  expected-detected-types.json  expected-scenarios.json
tests/fixtures/scenario_generator/cli_rust/src/: main.rs
tests/fixtures/scenario_generator/crypto_library/: Cargo.toml  expected-detected-types.json  expected-scenarios.json  go.mod
tests/fixtures/scenario_generator/crypto_library/src/: crypto.rs
tests/fixtures/scenario_generator/desktop_gtk/: CMakeLists.txt  Cargo.toml  expected-detected-types.json  expected-scenarios.json  main.c
tests/fixtures/scenario_generator/desktop_qt/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  demo_qt.pro  expected-detected-types.json  expected-scenarios.json  main.cpp
tests/fixtures/scenario_generator/library_c/: CMakeLists.txt  expected-detected-types.json  expected-scenarios.json
tests/fixtures/scenario_generator/library_c/include/: mylib.h
tests/fixtures/scenario_generator/library_c/src/: mylib.c
tests/fixtures/scenario_generator/message_queue_consumer/: consumer.py  expected-detected-types.json  expected-scenarios.json  go.mod  package.json  pyproject.toml
tests/fixtures/scenario_generator/ml_training/: expected-detected-types.json  expected-scenarios.json  pyproject.toml  requirements.txt  setup.py  train.py
tests/fixtures/scenario_generator/websocket_server/: Cargo.toml  expected-detected-types.json  expected-scenarios.json  go.mod  package.json  server.js
(+537 files in other folders)
