[project]
name = "code-auditor-agent"
version = "4.4.1"
description = "Six-phase PR review pipeline and 10-phase codebase audit pipeline for Claude Code"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "pyyaml>=6.0",
]
authors = [
    { name = "Emasoft", email = "713559+Emasoft@users.noreply.github.com" },
]

[project.optional-dependencies]
dev = [
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "types-pyyaml>=6.0",
    "pytest>=8.0",
    "yamllint>=1.35",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"

[tool.ruff]
line-length = 120
target-version = "py312"
# Honour the exclude list even when files are passed explicitly on the CLI
# (CPV validator does this for fixture files we want skipped).
force-exclude = true
# The plugin vendors NO CPV validator scripts (de-vendored 2026-06-11): validation and
# repo-lint run via `uvx … cpv-remote-validate`. Only genuinely-special paths are excluded.
extend-exclude = [
    # CPV-templated hook installer kept as-is (do not diverge from the upstream template).
    "scripts/setup_git_hooks.py",
    # Fixture files for ecaa-self-test-24 — they intentionally contain
    # the very bugs each detector is supposed to catch. Linting them
    # would defeat their purpose.
    "skills/ecaa-self-test-24/references/fixtures/",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["SIM102"]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
exclude = ["scripts_dev/", "docs_dev/", "builds_dev/", "reports_dev/", "reports/", "skills/ecaa-self-test-24/references/fixtures/"]

[tool.pyright]
pythonVersion = "3.12"
exclude = ["skills/ecaa-self-test-24/references/fixtures/"]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "types-pyyaml>=6.0.12.20250915",
    "pytest>=8.0",
    "yamllint>=1.35",
]
