[project]
name = "mycli"
version = "0.1.0"
description = "A tiny Click CLI fixture for the cli_python_click discoverer tests."
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
]

[project.scripts]
mycli = "cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
