# fixture for crypto_library — Cargo manifest declares crypto primitives
# so the type-detector picks crypto_library. Comment text is bare to
# avoid false positives in the substring-based fingerprint matcher.

[package]
name = "mycrypto"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8"
rsa = "0.9"
ed25519-dalek = "2.1"
hkdf = "0.12"
x25519-dalek = "2.0"
subtle = "2.5"
