# fixture for message_queue_consumer. Comment text is bare to avoid
# false positives in the substring-based fingerprint matcher.

[project]
name = "mq-fixture"
version = "0.0.1"
description = "Test fixture for the message_queue_consumer discoverer."
dependencies = [
    "kafka-python>=2.0.2",
    "pika>=1.3.0",
    "confluent-kafka>=2.3.0",
]
